# relec-django

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVNOTES.md  Dockerfile  Makefile  README.md  docker-compose.yml  docker-compose.yml.j2  package-lock.json  package.json  pyproject.toml  relec.dbml
.github/workflows/: cicd.yml
analytics/: README.md  urls.py  views.py
census/: admin.py  api_views.py  filters.py  geocoding.py  models.py  serializers.py  urls.py  views.py
census/fixtures/: census.json  denomination.json  location.json
census/management/commands/: fetch_omeka_images.py  import_census_data.py  import_data.py  import_datascribe_data.py  import_denominations.py  import_image_path.py  import_null_data.py  setup_transcription_groups.py  sync_denominations.py  sync_locations.py
census/migrations/: 0001_initial.py  0002_alter_denomination_family_arda_and_more.py  0002_alter_historicalreligiouscensusrecord_schedule_id_and_more.py  0002_historicalcensusschedule_and_more.py  0003_alter_denomination_denomination_id_and_more.py  0003_censusschedule_location_and_more.py  0004_clergy_census_schedule_and_more.py  0004_denomination_short_name_and_more.py  0005_remove_censusschedule_benevolences_and_more.py  0005_rename_family_arda_denomination_family_relec_and_more.py  0006_alter_historicalreligiousbody_census_code_and_more.py  0006_remove_church_census_record_remove_church_location_and_more.py  0007_alter_historicalreligiousbody_division_and_more.py  0007_alter_membership_census_record_and_more.py  0008_alter_membership_census_record_and_more.py  0008_censusschedule_original_image_and_more.py  0008_historicalreligiousbody_geocode_status_and_more.py  0009_alter_membership_census_record_and_more.py  0009_remove_historicalcensusschedule_original_image_and_more.py  0010_alter_censusschedule_datascribe_item_id_and_more.py  0010_alter_historicalmembership_options_and_more.py  0011_add_performance_indexes.py  0011_alter_censusschedule_datascribe_original_image_path_and_more.py  0012_censusschedule_box_censusschedule_notes_and_more.py  0012_merge_20251118_1448.py  0013_alter_censusschedule_datascribe_original_image_path_and_more.py  0014_alter_historicalreligiousbody_name_and_more.py  0015_alter_religiousbody_location.py  0016_remove_religiousbody_census_record_and_more.py  0017_censusschedule_box_historicalcensusschedule_box.py  0018_censusschedule_notes_historicalcensusschedule_notes_and_more.py  0019_censusschedule_datascribe_original_image_path_and_more.py  0020_alter_censusschedule_box_alter_censusschedule_notes_and_more.py  0021_remove_historicalmembership_church_and_more.py  0022_alter_historicalmembership_options_and_more.py  0023_alter_censusschedule_resource_id_and_more.py  0024_religiousbody_census_reli_denomin_652bc8_idx_and_more.py  0025_clergy_serving_congregation_and_more.py  0026_null_values_approach.py
church/: models.py
church/migrations/: 0001_initial.py
clergy/: apps.py  models.py
clergy/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py  views.py  wsgi.py
education/: models.py
education/migrations/: 0001_initial.py  0002_alter_sundayschool_church_and_more.py  0003_alter_vacationbibleschool_church.py
finance/: models.py
finance/migrations/: 0001_initial.py
location/: admin.py  models.py
location/management/commands/: import_locations.py
location/migrations/: 0001_initial.py  0002_alter_city_name_alter_county_name_and_more.py  0002_alter_historicallocation_place_id_and_more.py  0003_alter_city_name_alter_county_name_and_more.py  0004_alter_city_name_alter_county_name_and_more.py  0005_alter_city_name_alter_county_name_and_more.py  0006_censuslocationmapping.py  0007_delete_censuslocationmapping.py  0008_alter_historicallocation_county_ahcb_and_more.py
pages/: admin.py  models.py  urls.py  views.py
pages/migrations/: 0001_initial.py
religious_ecologies/: __init__.py  admin.py  apps.py  views.py
static-data/: schedules_with_datascribe.csv
static/css/: custom_unfold.css
templates/: 404.html  500.html  base.html  index.html
templates/admin/: index.html
templates/admin/census/: bulk_assign.html  missing_county_analysis.html  schedule_gap_analysis.html
templates/analytics/: county_analysis.html  data_completeness.html  denomination_analysis.html  home.html  query_builder.html  query_results.html  state_analysis.html
templates/census/: browser.html  demographics_map.html  denominations_browse.html  detail.html  locations_browse.html  map.html
templates/pages/: detail.html
theme/static_src/: tailwind.config.js
