[tool.poetry]
name = "religious_ecologies"
version = "0.1.0"
description = "Religious Ecologies: Django project for the Religious Ecologies project."
authors = ["Jason Heppler <jheppler@gmu.edu>"]
license = "Mozilla Public License"
readme = "README.md"
packages = [{include = "religious_ecologies"}]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.1"
daphne = "^4.2.1"
whitenoise = "^6.11.0"
django = "^5.2.6"
django-environ = "^0.12.0"
django-allauth = {version="^65.11.2", extras=["github"]}

django-tailwind = "^4.2.0"
django-storages = "^1.14.6"
boto3 = "^1.40.42"
django-unfold = "^0.67.0"
django-simple-history = "^3.10.1"
requests = "^2.32.5"
django-dbml = "^0.10.1"
djangorestframework = "^3.16.1"
django-filter = "^25.1"
psycopg2 = "^2.9.10"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
djhtml = "^3.0.9"
pre-commit = "^4.3.0"
django-debug-toolbar = "^6.0.0"
pytest-django = "^4.11.1"
pylint-django = "^2.6.1"

# [tool.ruff]
# # Use PEP8 line-length
# line-length = 79
# # Exclude common paths
# exclude = [
#     ".git",
#     ".tox",
#     ".venv",
#     "docs",
#     "requirements",
#     "node_modules",
#     "site",
#     "venv",
#
#     # And directories in cfgov that don't have python files to lint
#     "__pycache__",
#     "templates",
#
#     # Generated migration files will throw errors. We need to find a way
#     # to exclude django-generated migrations while including
#     # manually-written migrations.
#     "*/migrations/*.py",
#]
#
#[tool.ruff.lint]
# ignore = [
#     # Assigned Lambdas are fine.
#     "E731",
#
#     # B905 checks for a `strict=` parameter on calls to `zip()`, but that
#     # parameter isn't available on Python < 3.10.
#     "B905"
# ]
# select = [
#     # pycodestyle
#     "E",
#     # pyflakes
#     "F",
#     # flake8-bugbear
#     "B",
#     # pyupgrade
#     "UP",
#     # flake8-simplify
#     "SIM",
#     # isort
#     "I",
# ]
#
# [tool.ruff.lint.isort.sections]
# "django" = ["django"]
# "wagtail" = ["wagtail"]
#
# [tool.ruff.lint.isort]
# lines-after-imports = 2
# known-third-party = ["jinja2"]
# section-order = [
#     "future",
#     "standard-library",
#     "django",
#     "wagtail",
#     "third-party",
#     "first-party",
#     "local-folder",
# ]
